# compose

./: .compose-deps.json  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  index.html  package.json  stratum.toml  vite.config.js  vitest.config.js  vitest.tracker.config.js
.claude/: session-context.md  settings.json  settings.local.json
.compose/: build-stream.jsonl  compose.json  pipeline-audit.json
compose-mcp/: LICENSE  README.md  package.json  server.json
contracts/: checkpoint.schema.json  comp-obs-contract.schema.json  cross-model-review-result.json  feature-json.schema.json  goal-result.json  gsd-state.json  gsd-stuck.json  judge-result.json  lifecycle.json  par-merge-bounce.json  review-result.json  roadmap-deps.schema.json  roadmap-graph-frontmatter.schema.json  roadmap-row.schema.json  task-result.json  taskgraph-gsd.json  vision-state.schema.json
docs/: PRODUCT-SPEC.md  ROADMAP.md  agents.md  cli.md  cockpit.md  command-flows.md  configuration.md  e2e-checklist.md  examples.md  install.md  lifecycle.md  mcp.md  pipelines.md  team-presets.md  ui-cli-parity.md
lib/: agent-chains.js  agent-string.js  boundary-map.js  budget-ledger.js  bug-bisect.js  bug-checkpoint.js  bug-escalation.js  bug-index-gen.js  bug-ledger.js  build-all.js  build-dag.js  build-history.js  build-stream-schema.js  build-stream-writer.js  build.js  (+98 more)
stratum-mcp/: pyproject.toml
stratum-mcp/src/stratum_mcp/: __init__.py  cert_templates.py  executor.py  spec.py
stratum-mcp/tests/: test_cert_executor.py  test_cert_schema.py  test_cert_templates.py  test_executor_v3.py  test_no_file_conflicts_ensure.py  test_spec_v03.py
(+1630 files in other folders)
